--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   </head>
   <body>
     <div class="faq-container">
+      <img type="image/svg" src="./assets/images/icon-star.svg" alt="icon-star.svg" />
+      <div>FAQs</div>
       <div class="faq-item">
+          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
+          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
           <div class="faq-question" tabindex="0">What is Frontend Mentor, and how will it help me?</div>
           <div class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
             frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
@@ -20,18 +24,24 @@
           </div>
       </div>
       <div class="faq-item">
+          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
+          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
           <div class="faq-question" tabindex="0">Is Frontend Mentor free?</div>
           <div class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
             option providing access to a range of projects suitable for all skill levels.
           </div>
       </div>
       <div class="faq-item">
+          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
+          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
           <div class="faq-question" tabindex="0">Can I use Frontend Mentor projects in my portfolio?</div>
           <div class="faq-answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
             way to showcase your skills to potential employers!
           </div>
       </div>
       <div class="faq-item">
+          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
+          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
           <div class="faq-question" tabindex="0">How can I get help if I'm stuck on a Frontend Mentor challenge?</div>
           <div class="faq-answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
             channel where you can ask questions and seek support from other community members.
@@ -41,7 +51,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Philip Shaba</a>.
     </div>
 
     <script src="script.js"></script>
