Add dynamic background image selection based on screen size
- Modify index.html to use separate image elements for desktop and mobile backgrounds in the .faq-background div
- Update styles.css to include media queries for displaying the appropriate background image based on screen size
- Adjust CSS rules to handle background images and positioning
- Ensure proper styling for desktop and mobile views as per the Front-end Style Guide

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   </head>
   <body>
+    <div class="bg-image"></div>
     <div class="faq-container">
       <div class="faq-container-header">
         <img type="image/svg" src="./assets/images/icon-star.svg" alt="icon-star.svg" />
