--- a/index.html
+++ b/index.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-    <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" />
   
-    <title>Frontend Mentor | FAQ accordion</title>
-
-  </head>
-  <body>
-    <div class="bg-image"></div>
-    <div class="faq-container">
-      <div class="faq-container-header">
-        <img type="image/svg" src="./assets/images/icon-star.svg" alt="icon-star.svg" />
-        <div>FAQs</div>
-      </div>
-      <div class="faq-container-body">
-        <div class="faq-item">
-          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
-          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
-          <div class="faq-question" tabindex="0">What is Frontend Mentor, and how will it help me?</div>
-          <div class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
-            frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-            all levels and ideal for portfolio building.
-          </div>
+        <title>Frontend Mentor | FAQ accordion</title>
+    </head>
+    <body>
+        <div class="bg-image"></div>
+        <div class="faq-container">
+            <div class="faq-container-header">
+                <img type="image/svg" src="./assets/images/icon-star.svg" alt="icon-star.svg" />
+                <div>FAQs</div>
+            </div>
+            <div class="faq-container-body">
+                <div class="faq-question-container" tabindex="0">
+                    <div class="faq-header">
+                        <div class="faq-question">What is Frontend Mentor, and how will it help me?</div>
+                        <img src="./assets/images/icon-plus.svg" alt="icon-plus.svg" class="icon-plus">
+                        <img src="./assets/images/icon-minus.svg" alt="icon-minus.svg" class="icon-minus">
+                    </div>
+                    <div class="faq-answer">Frontend Mentor offers realistic coding challenges to help developers improve their 
+                        frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+                        all levels and ideal for portfolio building.
+                    </div>
+                </div>
+                <div class="faq-question-container" tabindex="0">
+                    <div class="faq-header">
+                        <div class="faq-question">Is Frontend Mentor free?</div>
+                        <img src="./assets/images/icon-plus.svg" alt="icon-plus.svg" class="icon-plus">
+                        <img src="./assets/images/icon-minus.svg" alt="icon-minus.svg" class="icon-minus">
+                    </div>
+                    <div class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+                        option providing access to a range of projects suitable for all skill levels.
+                    </div>
+                </div>
+                <div class="faq-question-container" tabindex="0">
+                    <div class="faq-header">
+                        <div class="faq-question">Can I use Frontend Mentor projects in my portfolio?</div>
+                        <img src="./assets/images/icon-plus.svg" alt="icon-plus.svg" class="icon-plus">
+                        <img src="./assets/images/icon-minus.svg" alt="icon-minus.svg" class="icon-minus">
+                    </div>
+                    <div class="faq-answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+                        way to showcase your skills to potential employers!
+                    </div>
+                </div>
+                <div class="faq-question-container" tabindex="0">
+                    <div class="faq-header">
+                        <div class="faq-question">How can I get help if I'm stuck on a Frontend Mentor challenge?</div>
+                        <img src="./assets/images/icon-plus.svg" alt="icon-plus.svg" class="icon-plus">
+                        <img src="./assets/images/icon-minus.svg" alt="icon-minus.svg" class="icon-minus">
+                    </div>
+                    <div class="faq-answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+                        channel where you can ask questions and seek support from other community members.
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="faq-item">
-          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
-          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
-          <div class="faq-question" tabindex="0">Is Frontend Mentor free?</div>
-          <div class="faq-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-            option providing access to a range of projects suitable for all skill levels.
-          </div>
+        
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://github.com/SHABA01">Philip Shaba</a>.
         </div>
-        <div class="faq-item">
-          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
-          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
-          <div class="faq-question" tabindex="0">Can I use Frontend Mentor projects in my portfolio?</div>
-          <div class="faq-answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-            way to showcase your skills to potential employers!
-          </div>
-        </div>
-        <div class="faq-item">
-          <img type="image/svg" src="./assets/images/icon-plus.svg" alt="icon-plus.svg" />
-          <img type="image/svg" src="./assets/images/icon-minus.svg" alt="icon-minus.svg" />
-          <div class="faq-question" tabindex="0">How can I get help if I'm stuck on a Frontend Mentor challenge?</div>
-          <div class="faq-answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-            channel where you can ask questions and seek support from other community members.
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Philip Shaba</a>.
-    </div>
-
-    <script src="script.js"></script>
-  </body>
+        
+        <script src="script.js"></script>
+    </body>
 </html>
